Fix problem with scrolling on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -22,6 +22,7 @@ body {
     right: auto;
     margin-left: auto;
     margin-right: auto;
+    overflow: auto;
 }
 
 #app :focus {
